--- a/portfolio.css
+++ b/portfolio.css
@@ -9,7 +9,7 @@
   background-size: cover;
 }
 
-/* Position the navbar container inside the image */
+/* Position the nav-bar container inside the image */
 .container {
   position: absolute;
   margin: 20px;
